# imgui-sdl2-boilerplate

./: .gitignore  CMakeLists.txt  main.cpp
include/: sdl2.h
